Задание #20 Подготовка графики личного проекта
Сделаны ссылки на контентные изображения в разметке. Также исправленые мелкие недочеты.

--- a/catalog.html
+++ b/catalog.html
@@ -7,11 +7,11 @@
 	<body>
 	<header class="main-header">
 		<nav class="main-navigation">
-			<h2 class="visually-hidden">Разделы сайта</h2>
 			<a class="main-header-logo" href="index.html">
-				<img src="#" width="" height="" alt="Логотип Нердс">
+				<img src="img/main-header-nerds-logo.svg" width="160" height="65" alt="Логотип Нердс">
 			</a>
 			<ul class="site-navigation">
+				<h2 class="visually-hidden">Разделы сайта</h2>
 				<li><a href="studio.html">Студия</a></li>
 				<li><a href="clients.html">Клиенты</a></li>
 				<li><a class="site-navigation-current" href="catalog.html">Магазин</a></li>
@@ -41,10 +41,10 @@
 			<h2 class="visually-hidden">Каталог шаблонов</h2>
 			<ul class="template-list">
 				<li class="sedona-item">
-					<h4><a href="#">sedona</a></h4>
+					<h4><a href="#">sedona</a></h4> <!-- а нужна ли здесь ссылка? -->
 					<p class="about">Инофрмационный сайт<br>для туристов</p>
 					<p class="image">
-						<a href="#"><img src="#" width="" height="" alt="Шаблон Седона"></a>
+						<a href="#"><img src="img/sedona-template.jpg" width="360" height="576" alt="Шаблон Седона"></a>
 					</p> <!--а может быть тут лучше присвоить класс ссылке и убрать параграф!? -->
 					<p class="button"> 
 						<a href="#">9900 руб.</a> <!-- и тут? -->
@@ -54,7 +54,7 @@
 					<h4><a href="#">pink app</a></h4>
 					<p class="about">Продуктовый лендинг<br> приложения для iOS и Android</p>
 					<p class="image">
-						<a href="#"><img src="#" width="" height="" alt="Шаблон Pink app"></a>
+						<a href="#"><img src="img/pink-template.jpg" width="360" height="576" alt="Шаблон Pink app"></a>
 					</p>
 					<p class="button">
 						<a href="#">9900 руб.</a>
@@ -64,7 +64,7 @@
 					<h4><a href="#">barbershop</a></h4>
 					<p class="about">Сайт салоны красоты.<br>Для мужчин, да</p>
 					<p class="image">
-						<a href="#"><img src="#" width="" height="" alt="Шаблон Барбершопа"></a>
+						<a href="#"><img src="img/barbershop-template.jpg" width="360 height="576" alt="Шаблон Барбершопа"></a>
 					</p>
 					<p class="button">
 						<a href="#">9900 руб.</a>
@@ -74,7 +74,7 @@
 					<h4><a href="#">mishka</a></h4>
 					<p class="about">Интернет-магазин<br>вязаных игрушек</p>
 					<p class="image">
-						<a href="#"><img src="#" width="" height="" alt="Шаблон интернет-магазина вязаных игрушек"></a>
+						<a href="#"><img src="img/mishka-template.jpg" width=360"" height="576" alt="Шаблон интернет-магазина вязаных игрушек"></a>
 					</p>
 					<p class="button">
 						<a href="#">9900 руб.</a>
@@ -84,17 +84,17 @@
 					<h4><a href="#">a plus</a></h4>
 					<p class="about">Лендинг курсов повышения<br>квалификации</p>
 					<p class="image">
-						<a href="#"><img src="#" width="" height="" alt="Шаблон A plus"></a>
+						<a href="#"><img src="img/aplus-template.jpg" width="360" height="576" alt="Шаблон A plus"></a>
 					</p>
 					<p class="button">
 						<a href="#">9900 руб.</a>
 					</p>
 				</li>
-				<li class="kvass-item">
-					<h4><a href="#">a plus</a></h4>
+				<li class="kvast-item">
+					<h4><a href="#">кваст</a></h4>
 					<p class="about">Промо-сайт производителя<br>крафтового кваса</p>
 					<p class="image">
-						<a href="#"><img src="#" width="" height="" alt="Шаблон Промо-сайта производителя крафтового кваса"></a>
+						<a href="#"><img src="img/kvast-template.jpg" width="360" height="576" alt="Шаблон Промо-сайта производителя крафтового кваса"></a>
 					</p>
 					<p class="button">
 						<a href="#">9900 руб.</a>
@@ -113,7 +113,7 @@
 	<footer class="main-footer">
 		<div class="map">
 			<h2 class="visually-hidden">Карта</h2>
-			<img class="map-picture" src="#" width="" height="" alt="Карта">
+			<img class="map-picture" src="img/map.jpg" width="1440" height="416" alt="Карта">
 		</div>			
 		<div class="contacts">
 			<h2 class="visually-hidden">Контакты</h2>
