--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 	<header class="main-header">
 		<nav class="main-navigation">
 			<a class="main-header-logo">
-				<img src="#" width="" height="" alt="Нёрдс">
+				<img src="img/main-header-nerds-logo.svg" width="160" height="65" alt="Нёрдс">
 			</a>
 			<ul class="site-navigation">
+				<h2 class="visually-hidden">Разделы сайта</h2>
 				<li><a href="studio.html">Студия</a></li>
 				<li><a href="clients.html">Клиенты</a></li>
 				<li><a href="catalog.html">Магазин</a></li>
@@ -27,7 +28,7 @@
 			<h2 class="visually-hidden">Слайдер</h2>
 			<ul class="sliders-list">
 				<li class="slider1">
-					<img src="#" width="" height="" alt="Два телефона">
+					<img src="" width="" height="" alt="Два телефона">
 					<h3>Долго, дорого, скрупулезно</h3> <!-- а здесь не h2 надо сделать? -->
 					<p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
 					<a href="#">Узнать больше</a>
@@ -50,19 +51,19 @@
 			<h2 class="visually-hidden">Виды работ</h2>
 			<ul class="services-list">
 				<li class="web-site">
-					<img src="#" width="" height="" alt="Веб-Сайты">
+					<img src="img/web-site.png" width="300" height="146" alt="Веб-Сайты">
 					<h3 >Веб-сайты</h3>
 					<p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
 					<a href="catalog.html">Заказать</a>
 				</li>
 				<li class="aps">
-					<img src="#" width="" height="" alt="Приложения">
+					<img src="img/apps.png" width="300" height="146" alt="Приложения">
 					<h3>Приложения</h3>
 					<p>Покорите топ-10 приложений в AppStore и Google Play</p>
 					<a href="catalog.html">Заказать</a>
 				</li>
 				<li class="presentation">
-					<img src="#" width="" height="" alt="Презентации">
+					<img src="img/presentation.png" width="300" height="146" alt="Презентации">
 					<h3>Презентации</h3>
 					<p>Вы даже не подозреваете, насколько вы изумительны!</p>
 					<a href="catalog.html">Заказать</a>
@@ -80,8 +81,8 @@
 				<li>Слайдшоу и видео для корпоративных презентаций</li>
 			</ul>
 		</section>
-		<section class="block-from-2004-year">
-			<p><img class="logo-nerds" src="#" width="" height="" alt="Логотип Нёрдс"></p>
+		<section class="block2004">
+			<p><img class="logo-nerds2" src="img/logo-nerds.png" width="360" height="208" alt="Логотип Нёрдс"></p>
 			<h4>с 2004 года любим точность во всем:</h4>
 			<ul class="statistics">
 				<li>
@@ -127,7 +128,7 @@
 	<footer class="main-footer">
 		<div class="map">
 			<h2 class="visually-hidden">Карта</h2>
-			<img class="map-picture" src="#" width="" height="" alt="Карта">
+			<img class="map-picture" src="img/map.jpg" width="1440" height="416" alt="Карта">
 		</div>			
 		<div class="contacts">
 			<h2 class="visually-hidden">Контакты</h2>
