Добавил остальные картинки. Исправил замечания.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
 	<header class="main-header">
 		<nav class="main-navigation">
 			<a class="main-header-logo">
-				<img src="img/main-header-nerds-logo.svg" width="160" height="65" alt="Нёрдс">
+				<img src="img/logo.svg" width="160" height="65" alt="Нёрдс">
 			</a>
 			<ul class="site-navigation">
-				<h2 class="visually-hidden">Разделы сайта</h2>
 				<li><a href="studio.html">Студия</a></li>
 				<li><a href="clients.html">Клиенты</a></li>
 				<li><a href="catalog.html">Магазин</a></li>
@@ -28,19 +27,19 @@
 			<h2 class="visually-hidden">Слайдер</h2>
 			<ul class="sliders-list">
 				<li class="slider1">
-					<img src="" width="" height="" alt="Два телефона">
-					<h3>Долго, дорого, скрупулезно</h3> <!-- а здесь не h2 надо сделать? -->
+					<img src="img/slide1.png" width="698" height="413" alt="Два телефона">
+					<h3>Долго, дорого, скрупулезно</h3>
 					<p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
 					<a href="#">Узнать больше</a>
 				</li>
 				<li class="slider2">
-					<img src="#" width="" height="" alt="Два компьютера">
+					<img src="img/slide2.png" width="698" height="413" alt="Два компьютера">
 					<h3>Любим математику как никто другой</h3>
 					<p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
 					<a href="catalog.html">Узнать больше</a>
 				</li>
 				<li class="slider3">
-					<img src="#" width="" height="" alt="Планшет и телефон">
+					<img src="img/slide3.png" width="698" height="413" alt="Планшет и телефон">
 					<h3>Только ночь, только хардкор</h3>
 					<p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
 					<a href="catalog.html">Узнать больше</a>
@@ -52,7 +51,7 @@
 			<ul class="services-list">
 				<li class="web-site">
 					<img src="img/web-site.png" width="300" height="146" alt="Веб-Сайты">
-					<h3 >Веб-сайты</h3>
+					<h3>Веб-сайты</h3>
 					<p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
 					<a href="catalog.html">Заказать</a>
 				</li>
@@ -72,9 +71,9 @@
 		</section> 
 		<section class="about">
 			<h2 class="visually-hidden">О студии</h2> 		
-			<p class="slogan"><b>Мы - маленькая, но гордая дизайн-студия из Краснодара.</b></p> <!-- тут же класс оставляем?! -->
+			<p class="slogan"><b>Мы - маленькая, но гордая дизайн-студия из Краснодара.</b></p>
 			<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
-			<h4>выполняем заказы на разработку:</h4>
+			<h4>Выполняем заказы на разработку:</h4>
 			<ul class="orders">
 				<li>Веб-сайтов любой сложности</li>
 				<li>Мобильных приложений для iOS и Android</li>
@@ -83,7 +82,7 @@
 		</section>
 		<section class="block2004">
 			<p><img class="logo-nerds2" src="img/logo-nerds.png" width="360" height="208" alt="Логотип Нёрдс"></p>
-			<h4>с 2004 года любим точность во всем:</h4>
+			<h4>С 2004 года любим точность во всем:</h4>
 			<ul class="statistics">
 				<li>
 					146<span class="percent">%</span><br>
@@ -104,22 +103,22 @@
 			<ul class="partners-list">
 				<li>
 					<a href="https://htmlacademy.ru">
-						<img src="#" width="" height="" alt="HTML Academy">
+						<img src="img/logo-academy.png" width="199" height="68" alt="HTML Academy">
 					</a>
 				</li>
 				<li>
 					<a href="borodinski.html">
-						<img src="#" width="" height="" alt="Барбершоп">
+						<img src="img/logo-barbershop.png" width="199" height="68" alt="Барбершоп">
 					</a>
 				</li>
 				<li>
 					<a href="pink.html">
-						<img src="#" width="" height="" alt="PINK">
+						<img src="img/logo-pink.png" width="199" height="68" alt="PINK">
 					</a>
 				</li>
 				<li>
 					<a href="mishka.html">
-						<img src="#" width="" height="" alt="MISHKA">
+						<img src="img/logo-mishka.png" width="199" height="68" alt="MISHKA">
 					</a>
 				</li>
 			</ul>
@@ -132,8 +131,9 @@
 		</div>			
 		<div class="contacts">
 			<h2 class="visually-hidden">Контакты</h2>
-			<h4>nerds design studio</h4>
-			<p>191186, Санкт-Петербург,<br>ул. Конюшенная, д. 19/8</p>
+			<h4>Nerds design studio</h4>
+			<p>191186, Санкт-Петербург,<br>
+			ул. Конюшенная, д. 19/8</p>
 			<p>тел. +7(812)275-75-75</p>
 			<a class="button-letter-to-nerds" href="#">Напишите нам</a>
 		</div>
