--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
 	<header class="main-header">
 		<nav class="main-navigation">
 			<a class="main-header-logo" href="index.html">
-				<img src="img/main-header-nerds-logo.svg" width="160" height="65" alt="Логотип Нердс">
+				<img src="img/logo.svg" width="160" height="65" alt="Логотип Нердс">
 			</a>
 			<ul class="site-navigation">
 				<h2 class="visually-hidden">Разделы сайта</h2>
