--- a/index.html
+++ b/index.html
@@ -5,170 +5,169 @@
 		<title>Нёрдс</title>
 	</head>
 	<body>
-	<header class="main-header">
-		<nav class="main-navigation">
-			<a class="main-header-logo">
-				<img src="img/logo.svg" width="160" height="65" alt="Нёрдс">
-			</a>
-			<ul class="site-navigation">
-				<li><a href="studio.html">Студия</a></li>
-				<li><a href="clients.html">Клиенты</a></li>
-				<li><a href="catalog.html">Магазин</a></li>
-				<li><a href="contacts.html">Контакты</a></li>
-			</ul>
-			<ul class="login-to-basket">
-				<li><a class="basket-link" href="#">Корзина</a></li> 
-			</ul>
-		</nav>
-	</header>
-	<main class="container">
-		<h1 class="visually-hidden">Cтудия дизайна Nerds</h1>
-		<section class="sliders">
-			<h2 class="visually-hidden">Слайдер</h2>
-			<ul class="sliders-list">
-				<li class="slider1">
-					<img src="img/slide1.png" width="698" height="413" alt="Два телефона">
-					<h3>Долго, дорого, скрупулезно</h3>
-					<p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
-					<a href="#">Узнать больше</a>
-				</li>
-				<li class="slider2">
-					<img src="img/slide2.png" width="698" height="413" alt="Два компьютера">
-					<h3>Любим математику как никто другой</h3>
-					<p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
-					<a href="catalog.html">Узнать больше</a>
-				</li>
-				<li class="slider3">
-					<img src="img/slide3.png" width="698" height="413" alt="Планшет и телефон">
-					<h3>Только ночь, только хардкор</h3>
-					<p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
-					<a href="catalog.html">Узнать больше</a>
-				</li>
-			</ul>
-		</section>
-		<section class="services">
-			<h2 class="visually-hidden">Виды работ</h2>
-			<ul class="services-list">
-				<li class="web-site">
-					<img src="img/web-site.png" width="300" height="146" alt="Веб-Сайты">
-					<h3>Веб-сайты</h3>
-					<p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-					<a href="catalog.html">Заказать</a>
-				</li>
-				<li class="aps">
-					<img src="img/apps.png" width="300" height="146" alt="Приложения">
-					<h3>Приложения</h3>
-					<p>Покорите топ-10 приложений в AppStore и Google Play</p>
-					<a href="catalog.html">Заказать</a>
-				</li>
-				<li class="presentation">
-					<img src="img/presentation.png" width="300" height="146" alt="Презентации">
-					<h3>Презентации</h3>
-					<p>Вы даже не подозреваете, насколько вы изумительны!</p>
-					<a href="catalog.html">Заказать</a>
-				</li>
-			</ul>
-		</section> 
-		<section class="about">
-			<h2 class="visually-hidden">О студии</h2> 		
-			<p class="slogan"><b>Мы - маленькая, но гордая дизайн-студия из Краснодара.</b></p>
-			<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
-			<h4>Выполняем заказы на разработку:</h4>
-			<ul class="orders">
-				<li>Веб-сайтов любой сложности</li>
-				<li>Мобильных приложений для iOS и Android</li>
-				<li>Слайдшоу и видео для корпоративных презентаций</li>
-			</ul>
-		</section>
-		<section class="block2004">
-			<p><img class="logo-nerds2" src="img/logo-nerds.png" width="360" height="208" alt="Логотип Нёрдс"></p>
-			<h4>С 2004 года любим точность во всем:</h4>
-			<ul class="statistics">
-				<li>
-					146<span class="percent">%</span><br>
-					Уровень самоотдачи
-				</li>
-				<li>
-					100<span class="percent">%</span><br>
-					Соблюдение сроков
-				</li>
-				<li>
-					50<span class="percent">%</span><br>
-					Минимальная предоплата
-				</li>
-			</ul>
-		</section>
-		<section class="partners-section">
-			<h2 class="visually-hidden">Работы</h2>
-			<ul class="partners-list">
-				<li>
-					<a href="https://htmlacademy.ru">
-						<img src="img/logo-academy.png" width="199" height="68" alt="HTML Academy">
-					</a>
-				</li>
-				<li>
-					<a href="borodinski.html">
-						<img src="img/logo-barbershop.png" width="199" height="68" alt="Барбершоп">
-					</a>
-				</li>
-				<li>
-					<a href="pink.html">
-						<img src="img/logo-pink.png" width="199" height="68" alt="PINK">
-					</a>
-				</li>
-				<li>
-					<a href="mishka.html">
-						<img src="img/logo-mishka.png" width="199" height="68" alt="MISHKA">
-					</a>
-				</li>
-			</ul>
-		</section>
-	</main>
-	<footer class="main-footer">
-		<div class="map">
-			<h2 class="visually-hidden">Карта</h2>
-			<img class="map-picture" src="img/map.jpg" width="1440" height="416" alt="Карта">
-		</div>			
-		<div class="contacts">
-			<h2 class="visually-hidden">Контакты</h2>
-			<h4>Nerds design studio</h4>
-			<p>191186, Санкт-Петербург,<br>
-			ул. Конюшенная, д. 19/8</p>
-			<p>тел. +7(812)275-75-75</p>
-			<a class="button-letter-to-nerds" href="#">Напишите нам</a>
-		</div>
-		<div class="footer-social">
-			<ul>
-				<li><a class="button-vk" href="#">Вконтакте</a></li>
-				<li><a class="button-facebook" href="#">Фейсбук</a></li>
-				<li><a class="button-instagram" href="#">Инстаграм</a></li>
-			</ul>
-		</div>
-		<div class="footer-discount">
-			<b>Давайте дружить, это выгодно</b>
-			<p>Скидка 10% для друзей из социальных сетей</p>
-		</div>
-	</footer>
-		<form class="letter-to-nerds" action="#" method="post">
-			<h2>Напишите нам</h2>
-			<span class="letter-to-nerds-close">x</span> <!-- почти уверен, что неправильно, таким образом я хотел отоброзить элемент закрытия формы? -->
-			<div class="name-email">
-				<label>
-					<b>Ваше имя:</b> 
-					<input type="text" name="login" id="login" placeholder="Имя Фамилия"> <!-- вообще нужен ли id? -->
-				</label>
-				<label>
-					<b>Ваш e-mail:</b> 	
-					<input type="email" name="email" id="email" placeholder="email@example.com"> 
-				</label>
-			</div> <!-- что в таких случаях лучше применять div или p?? -->
-			<div class="text-of-the-letter">
-				<label>
-					<b>Текст письма:</b><br>
-					<textarea name="letter" rows="4" cols="" placeholder="В свободной форме" id="letter"></textarea>
-				</label>
+		<header class="main-header">
+			<nav class="main-navigation">
+				<a class="main-header-logo">
+					<img src="img/logo.svg" width="160" height="65" alt="Нёрдс">
+				</a>
+				<ul class="site-navigation">
+					<h2 class="visually-hidden">Разделы сайта</h2>
+					<li><a href="studio.html">Студия</a></li>
+					<li><a href="clients.html">Клиенты</a></li>
+					<li><a href="catalog.html">Магазин</a></li>
+					<li><a href="contacts.html">Контакты</a></li>
+				</ul>
+				<ul class="basket-link">
+					<li><a href="#">Корзина</a></li> 
+				</ul>
+			</nav>
+		</header>
+		<main class="container">
+			<h1 class="visually-hidden">Cтудия дизайна Nerds</h1>
+			<section class="sliders">
+				<h2 class="visually-hidden">Слайдер</h2>
+				<ul class="sliders-list">
+					<li class="slider1">
+						<img src="img/slide1.png" width="698" height="413" alt="Два телефона">
+						<h3>Долго, дорого, скрупулезно</h3>
+						<p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+						<a href="#">Узнать больше</a>
+					</li>
+					<li class="slider2">
+						<img src="img/slide2.png" width="698" height="413" alt="Два компьютера">
+						<h3>Любим математику как никто другой</h3>
+						<p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+						<a href="catalog.html">Узнать больше</a>
+					</li>
+					<li class="slider3">
+						<img src="img/slide3.png" width="698" height="413" alt="Планшет и телефон">
+						<h3>Только ночь, только хардкор</h3>
+						<p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+						<a href="catalog.html">Узнать больше</a>
+					</li>
+				</ul>
+			</section>
+			<section class="services">
+				<h2 class="visually-hidden">Виды работ</h2>
+				<ul class="services-list">
+					<li class="web-site">
+						<img src="img/web-site.png" width="300" height="146" alt="Веб-Сайты">
+						<h3>Веб-сайты</h3>
+						<p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+						<a href="catalog.html">Заказать</a>
+					</li>
+					<li class="aps">
+						<img src="img/apps.png" width="300" height="146" alt="Приложения">
+						<h3>Приложения</h3>
+						<p>Покорите топ-10 приложений в AppStore и Google Play</p>
+						<a href="catalog.html">Заказать</a>
+					</li>
+					<li class="presentation">
+						<img src="img/presentation.png" width="300" height="146" alt="Презентации">
+						<h3>Презентации</h3>
+						<p>Вы даже не подозреваете, насколько вы изумительны!</p>
+						<a href="catalog.html">Заказать</a>
+					</li>
+				</ul>
+			</section> 
+			<section class="about">
+				<h2 class="visually-hidden">О студии</h2> 		
+				<p class="slogan"><b>Мы - маленькая, но гордая дизайн-студия из Краснодара.</b></p>
+				<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+				<h4>Выполняем заказы на разработку:</h4>
+				<ul class="orders">
+					<li>Веб-сайтов любой сложности</li>
+					<li>Мобильных приложений для iOS и Android</li>
+					<li>Слайдшоу и видео для корпоративных презентаций</li>
+				</ul>
+			</section>
+			<section class="block2004">
+				<p><img class="logo-nerds2" src="img/logo-nerds.png" width="360" height="208" alt="Логотип Нёрдс"></p>
+				<h4>С 2004 года любим точность во всем:</h4>
+				<ul class="statistics">
+					<li>
+						146<span class="percent">%</span><br>
+						Уровень самоотдачи
+					</li>
+					<li>
+						100<span class="percent">%</span><br>
+						Соблюдение сроков
+					</li>
+					<li>
+						50<span class="percent">%</span><br>
+						Минимальная предоплата
+					</li>
+				</ul>
+			</section>
+			<section class="partners-section">
+				<h2 class="visually-hidden">Работы</h2>
+				<ul class="partners-list">
+					<li>
+						<a href="https://up.htmlacademy.ru/htmlcss/20/specification#nerds-3-6">
+							<img src="img/logo-academy.png" width="199" height="68" alt="HTML Academy">
+						</a>
+					</li>
+					<li>
+						<a href="borodinski.html">
+							<img src="img/logo-barbershop.png" width="199" height="68" alt="Барбершоп">
+						</a>
+					</li>
+					<li>
+						<a href="pink.html">
+							<img src="img/logo-pink.png" width="199" height="68" alt="PINK">
+						</a>
+					</li>
+					<li>
+						<a href="mishka.html">
+							<img src="img/logo-mishka.png" width="199" height="68" alt="MISHKA">
+						</a>
+					</li>
+				</ul>
+			</section>
+		</main>
+		<footer class="main-footer">
+			<div class="map">
+				<h2 class="visually-hidden">Карта</h2>
+				<img class="map-picture" src="img/map.jpg" width="1440" height="416" alt="Карта">
+			</div>			
+			<div class="contacts">
+				<h2 class="visually-hidden">Контакты</h2>
+				<h4>Nerds design studio</h4>
+				<p>191186, Санкт-Петербург,<br>
+				ул. Конюшенная, д. 19/8</p>
+				<p>тел. +7(812)275-75-75</p>
+				<a class="button-letter" href="#">Напишите нам</a>
 			</div>
-			<a href="#">Отправить</a> <!--а можно ли такие элементы делать с помощью button? -->
-		</form>
+			<div class="footer-social">
+				<ul>
+					<li><a class="button-vk" href="#">Вконтакте</a></li>
+					<li><a class="button-facebook" href="#">Фейсбук</a></li>
+					<li><a class="button-instagram" href="#">Инстаграм</a></li>
+				</ul>
+			</div>
+			<div class="footer-discount">
+				<b>Давайте дружить, это выгодно</b>
+				<p>Скидка 10% для друзей из социальных сетей</p>
+			</div>
+		</footer>
+		<section class="feedback">
+			<form class="letter" action="https://echo.htmlacademy.ru" method="post">
+				<h3>Напишите нам</h3>
+				<p>
+					<label class="visually-hidden" for="user-name"><b>Ваше имя:</b></label><br>
+					<input class="field-name" id="user-name" name="name" type="text" placeholder="Имя Фамилия">
+				</p>
+				<p>
+					<label class="visually-hidden" for="user-email"><b>Ваше e-mail:</b></label><br>
+					<input class="field-email" id="user-email" name="email" type="text" placeholder="email@example.com">
+				</p>
+				<p>
+					<label class="visually-hidden" for="user-letter"><b>Текст письма:</b></label><br>
+					<textarea id="user-letter" name="letter" type="text" rows="4" cols="" placeholder="В свободной форме"></textarea>	
+				</p>
+				<button class="button" typ="submit">Отпрвить</button>
+			</form>			
+			<button class="feedback-close" type="button">Закрыть</button>
+		</section>	
 	</body>
 </html>
