Внес очередные изменения
1. Исправил ссылку.
2. Исправил скрытый заголовок в ul.
3. Исправил type для email.
4. Убрал скрытые поля в форме.
5. Исправил опечатки

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 				<a class="main-header-logo">
 					<img src="img/logo.svg" width="160" height="65" alt="Нёрдс">
 				</a>
+				<h2 class="visually-hidden">Разделы сайта</h2>
 				<ul class="site-navigation">
-					<h2 class="visually-hidden">Разделы сайта</h2>
 					<li><a href="studio.html">Студия</a></li>
 					<li><a href="clients.html">Клиенты</a></li>
 					<li><a href="catalog.html">Магазин</a></li>
@@ -103,7 +103,7 @@
 				<h2 class="visually-hidden">Работы</h2>
 				<ul class="partners-list">
 					<li>
-						<a href="https://up.htmlacademy.ru/htmlcss/20/specification#nerds-3-6">
+						<a href="https://htmlacademy.ru/intensive/htmlcss">
 							<img src="img/logo-academy.png" width="199" height="68" alt="HTML Academy">
 						</a>
 					</li>
@@ -154,18 +154,18 @@
 			<form class="letter" action="https://echo.htmlacademy.ru" method="post">
 				<h3>Напишите нам</h3>
 				<p>
-					<label class="visually-hidden" for="user-name"><b>Ваше имя:</b></label><br>
+					<label for="user-name">Ваше имя:</label><br>
 					<input class="field-name" id="user-name" name="name" type="text" placeholder="Имя Фамилия">
 				</p>
 				<p>
-					<label class="visually-hidden" for="user-email"><b>Ваше e-mail:</b></label><br>
-					<input class="field-email" id="user-email" name="email" type="text" placeholder="email@example.com">
+					<label for="user-email">Ваше e-mail:</label><br>
+					<input class="field-email" id="user-email" name="email" type="email" placeholder="email@example.com">
 				</p>
 				<p>
-					<label class="visually-hidden" for="user-letter"><b>Текст письма:</b></label><br>
+					<label for="user-letter">Текст письма:</label><br>
 					<textarea id="user-letter" name="letter" type="text" rows="4" cols="" placeholder="В свободной форме"></textarea>	
 				</p>
-				<button class="button" typ="submit">Отпрвить</button>
+				<button class="button" typ="submit">Отправить</button>
 			</form>			
 			<button class="feedback-close" type="button">Закрыть</button>
 		</section>	
