--- a/catalog.html
+++ b/catalog.html
@@ -14,7 +14,7 @@
 				<ul class="site-navigation">
 					<li><a href="studio.html">Студия</a></li>
 					<li><a href="clients.html">Клиенты</a></li>
-					<li><a class="site-navigation-current" href="catalog.html">Магазин</a></li>
+					<li><a class="site-navigation-current">Магазин</a></li>
 					<li><a href="contacts.html">Контакты</a></li>
 				</ul>
 				<ul class="basket-link">
