--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 					<input class="field-name" id="user-name" name="name" type="text" placeholder="Имя Фамилия">
 				</p>
 				<p>
-					<label for="user-email">Ваше e-mail:</label><br>
+					<label for="user-email">Ваш e-mail:</label><br>
 					<input class="field-email" id="user-email" name="email" type="email" placeholder="email@example.com">
 				</p>
 				<p>
